--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-miden-lib = "0.2.1"
-miden-objects = "0.2.1"
 miden-processor = "0.9.1"
 miden-prover = "0.9.1"
-miden-tx = "0.2.1"
 miden-vm = "0.9.1"
 rand_chacha = "0.3.1"
+
+
+miden-lib =  { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-lib" } 
+miden-objects =  { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects" } 
+miden-tx ={ git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-tx" }  
+mock = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-mock" }
