--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,5 @@ miden-lib =  { git = "https://github.com/0xPolygonMiden/miden-base.git", package
 miden-objects =  { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects" } 
 miden-tx ={ git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-tx" }  
 mock = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-mock" }
+rand = "0.8.5"
 
