--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,12 @@ miden-processor = "0.9"
 miden-prover = "0.9"
 miden-vm = "0.9"
 rand_chacha = "0.3.1"
-miden-lib =  { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-lib" } 
 miden-objects =  { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects" } 
 miden-tx ={ git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-tx" }  
 mock = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-mock" }
 rand = "0.8.5"
 miden-stdlib = "0.9.1"
+
+# miden-lib =  { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-lib" } 
+miden-lib = "0.2.1"
 
