--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,9 @@ miden-tx ={ git = "https://github.com/0xPolygonMiden/miden-base.git", package = 
 mock = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-mock" }
 rand = "0.8.5"
 miden-stdlib = "0.9.1"
-miden-lib = "0.2.1"
+# miden-lib = "0.2.1"
+
+miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-lib" }
+
+# miden-objects = "0.2.1"
 
