--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,14 @@ edition = "2021"
 
 [dependencies]
 rand_chacha = "0.3.1"
-miden-objects =  { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects" } 
-miden-tx ={ git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-tx" }  
-mock = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-mock" }
+miden-objects =  { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects", branch = "next" } 
+miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-tx", branch = "next" }  
+mock = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-mock", branch = "next" }
 rand = "0.8.5"
 miden-stdlib = "0.9.1"
 # miden-lib = "0.2.1"
 
-miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-lib" }
+miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-lib", branch = "next" }
 miden-vm = "0.9.1"
 miden-processor = "0.9.2"
 miden-prover = "0.9.1"
-
-
