--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,20 @@ edition = "2021"
 
 [dependencies]
 rand_chacha = "0.3.1"
-miden-objects =  { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects", branch = "next" } 
-miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-tx", branch = "next" }  
-mock = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-mock", branch = "next" }
+miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects", branch = "main" }
+miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-tx", branch = "main" }
+mock = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-mock", branch = "main" }
 rand = "0.8.5"
 miden-stdlib = "0.9.1"
-
-miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-lib", branch = "next" }
+miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-lib", branch = "main" }
 miden-vm = "0.9.1"
 miden-processor = "0.9.2"
 miden-prover = "0.9.1"
+tokio = "1.37.0"
+miden-client = "0.3.0"
+figment = "0.10.19"
+uuid = { version = "1.6.1", features = ["serde", "v4"], optional = true }
+
+[patch.crates-io]
+miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects", branch = "main" }
+miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-tx", branch = "main" }
