--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ miden-prover = "0.9.1"
 tokio = "1.37.0"
 miden-client = "0.3.0"
 figment = "0.10.19"
-uuid = { version = "1.6.1", features = ["serde", "v4"], optional = true }
+uuid = { version = "1.6.1", features = ["serde", "v4"] }
 
 [patch.crates-io]
 miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects", branch = "main" }
