--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,12 @@ edition = "2021"
 
 [dependencies]
 rand_chacha = "0.3.1"
-miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects", branch = "main" }
-miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-tx", branch = "main" }
-mock = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-mock", branch = "main" }
+miden-objects =  { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects", branch = "next" } 
+miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-tx", branch = "next" }  
+mock = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-mock", branch = "next" }
 rand = "0.8.5"
 miden-stdlib = "0.9.1"
-miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-lib", branch = "main" }
+miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-lib", branch = "next" }
 miden-vm = "0.9.1"
 miden-processor = "0.9.2"
 miden-prover = "0.9.1"
@@ -20,9 +20,6 @@ figment = "0.10.19"
 uuid = { version = "1.6.1", features = ["serde", "v4"], optional = true }
 cargo-make = "0.37.12"
 
-[patch.crates-io]
-miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects", branch = "main" }
-miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-tx", branch = "main" }
 
 [features]
 default = ["std"]
