--- a/Makefile.toml
+++ b/Makefile.toml
@@ -43,6 +43,20 @@ description = "Run the integration test binary. Requires a node to connect to."
 command = "cargo"
 args = ["nextest", "run", "--release", "--test=integration", "--features", "${FEATURES_INTEGRATION_TESTING}"]
 
+[tasks.mock-integration-test]
+description = "Run the mock integration test binary."
+script = [
+    'cp Cargo.toml.mock_integration Cargo.toml',
+    'cargo nextest run --release --test=mock_integration --features integration'
+]
+
+[tasks.integration-test]
+description = "Run the integration test binary."
+script = [
+    'cp Cargo.toml.integration Cargo.toml',
+    'cargo nextest run --release --test=integration --features integration'
+]
+
 # Same commands as above but using ci profile for nextest
 [tasks.ci-test]
 description = "Run the client testing suite"
